# slack_desktop_dispatcher

./: .dockerignore  .env.example  .gitignore  .pyre_configuration  Dockerfile  Makefile  README.md  alembic.ini  compose-dev.yaml  compose.yaml  k8s-deployment.md  pyproject.toml
alembic/: env.py
alembic/versions/: 3ac6f96a37eb_initial.py  673e9dfa0e5d_.py
config/: add_dev.yaml
desktop_dispatcher/: api.py  config.py  events.py  init_db.py  main.py  models.py  routes.py  session.py  settings.py  slack_client.py  utils.py  views.py
desktop_dispatcher/models/: desktop.py  models.py  user.py
migrations/: env.py
migrations/versions/: 6f01aefa2e00_create_desktop_table.py  ec720404ac87_.py
slack-bot/: Chart.yaml  pg-values.yaml  values.yaml
slack-bot/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
slack-bot/templates/tests/: test-connection.yaml
