[tool.poetry]
name = "add_desktop_dispatcher"
version = "0.1.0"
description = ""
authors = ["Glib Glugovskiy <glugov1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
aiohttp_jinja2 = "^1.2.0"
jinja2 = "^2.11.2"
aiopg = {extras = ["sa"], version = "^1.0.0"}
gino = "1.0.0"
trafaret = "^2.0.2"
sqlalchemy = "^1.3.16"
gino-aiohttp = "^0.1.0"
trafaret_config = "^2.0.2"
slackeventsapi = "^2.1.0"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
