[tool.poetry]
name = "desktop_dispatcher"
version = "0.1.0"
description = ""
authors = ["Arsen Hrynevych <arsen.hrynevych@raccoongang.com>", "Glib Glugovskiy <glugov1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
slack-sdk = "^3.31.0"
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
aiohttp = "^3.9.5"
slack-bolt = "^1.19.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


